--- a/AtkTennisWeb/Views/AdminHome/ListMember.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/ListMember.cshtml
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Kullanıcılar</h1>
+                    <h1>Üyeler</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -34,11 +34,11 @@
                                             <div class="media align-items-stretch">
 
                                                 <div style="margin-top:10px" class="media-body">
-                                                    <h3>Kullanıcı Listeleri</h3>
+                                                    <h3>Üye Listeleri</h3>
                                                 </div>
 
                                                 <div class="align-self-center">
-                                                    <a href="~/AdminHome/NewRegister"><h3><i style="font-size:25px; margin-left:10px ; color:darkmagenta" class="fas fa-plus"></i></h3></a>
+                                                    <a href="~/AdminHome/RegisterMember"><h3><i style="font-size:25px; margin-left:10px ; color:darkmagenta" class="fas fa-plus"></i></h3></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -1079,9 +1079,9 @@
                         else
                             alert("reservasyon bulunamadı");
 
-                        
 
-                        
+
+
 
                         row += '</tbody>';
                         row += '</table>';
