--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -143,7 +143,7 @@
 
                               
 
-                                window.location.href = "../AdminHome/Index?date=" + today;
+                                window.location.href = "../AdminHome/Index";
                             }
                         }
                     });
@@ -197,7 +197,7 @@
                         
                        
 
-                        window.location.href = "../AdminHome/Index?date=" + today;
+                        window.location.href = "../AdminHome/Index";
                     }
 
                     else
