--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -36,8 +36,11 @@
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
+
     <script src="~/lib/jquery/dist/jquery-ui.js"></script>
 </head>
+
+  
 
 @{
     var fullname = HttpContextAccessor.HttpContext.Session.GetString("FullName");
@@ -51,6 +54,31 @@
 }
 
 <body class="hold-transition sidebar-mini layout-fixed">
+
+    <style>
+        .ui-autocomplete {
+            font-size: 14px;
+            cursor: pointer;
+            text-align: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1510 !important;
+            float: left;
+            min-width: 350px !important;
+            width: 350px !important;
+            padding: 4px 0;
+            margin: 2px 0 0 0;
+            list-style: circle;
+            background-color: #ffffff;
+            border-color: black !important;
+            border-color: rgba(0, 0, 0, 0.2);
+            border-style: solid;
+            border-width: 1px !important;
+            
+        }
+    </style>
+
     <div class="wrapper">
 
         <!-- Navbar -->
@@ -61,6 +89,17 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
             </ul>
+
+            <div id="findMem" class="form-inline ml-3">
+                <div class="input-group input-group-sm">
+                    <input id="findMemberTotal" class="form-control form-control-navbar ui-autocomplete-input" type="search" placeholder="Kullanıcı Ara" aria-label="Search">
+                    <div class="input-group-append">
+                        <button onclick="getMemberInf()" class="btn btn-navbar" type="button">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
 
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
@@ -173,7 +212,7 @@
                         @if (Mutuals.UserSettings[HttpContextAccessor.HttpContext.Session.GetString("RoleId")].Dashboard)
                         {
                             <li class="nav-item menu-open">
-                                <a style="background-color:#d4ff0761" href="~/AdminHome/Index?date=@date" class="nav-link active">
+                                <a style="background-color:#d4ff0761" href="~/AdminHome/Index" class="nav-link active">
                                     <i class="nav-icon fas fa-tachometer-alt"></i>
                                     <p>
                                         Ana Sayfa
@@ -232,7 +271,7 @@
                                     </li>
 
                                     <li class="nav-item">
-                                        <a href="" class="nav-link">
+                                        <a href="~/AdminHome/RegisterStudent" class="nav-link">
                                             <i class="fas fa-plus nav-icon"></i>
                                             <p>Öğrenci Kaydı</p>
                                         </a>
@@ -263,17 +302,17 @@
 
                                 <ul class="nav nav-treeview">
 
-                                    @{
+                                    @*@{
                                         if (roleName != "Yönetici")
-                                        {
+                                        {*@
                                             <li class="nav-item">
                                                 <a href="~/Public/Reservation?date=@date" class="nav-link">
                                                     <i class="fas fa-calendar-check nav-icon"></i>
                                                     <p>Rezervasyon Yap</p>
                                                 </a>
                                             </li>
-                                        }
-                                    }
+                                        @*}
+                                    }*@
 
 
 
@@ -669,3 +708,84 @@
 </body>
 </html>
 
+<script>
+
+    
+
+    jQuery.ui.autocomplete.prototype._resizeMenu = function () {
+        var ul = this.menu.element;
+        ul.outerWidth(this.element.outerWidth());
+    }
+
+    findMemberTotal();
+
+    function findMemberTotal() {
+
+        
+
+        $.ajax({
+            type: "Get",
+            url: '../Public/UserList',
+            cache: false,
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+
+
+                var mem = [];
+
+                for (var i = 0; i < res.memberLists.length; i++) {
+                    mem.push(res.memberLists[i].memberNumber + ' - ' + res.memberLists[i].fullName + ' - ' + res.memberLists[i].nickName);
+                }
+
+                $("#findMemberTotal").autocomplete({
+                    source: mem
+                });
+
+
+            },
+
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+    }
+
+
+    function getMemberInf() {
+
+        debugger;
+
+        $.ajax({
+            type: "Get",
+            url: '../Public/UserList',
+            cache: false,
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+
+
+                var mem = [];
+
+                for (var i = 0; i < res.memberLists.length; i++) {
+                    mem.push(res.memberLists[i].memberNumber + ' - ' + res.memberLists[i].fullName + ' - ' + res.memberLists[i].nickName);
+                }
+
+                $("#findMemberTotal").autocomplete({
+                    source: mem
+                });
+
+
+            },
+
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+    }
+
+</script>
